trouble with css

--- a/index.html
+++ b/index.html
@@ -5,7 +5,24 @@
 		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
-		<h1>	</h1>
+		<h1>Welcome to Recycling, probably the most fun experience you'll ever have</h1>
+		
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 		<script src="script.js">
 		</script>
 	</body>
