index.html add ons with paragraph

--- a/index.html
+++ b/index.html
@@ -3,10 +3,33 @@
 	<head>
 		<title> </title>
 		<link rel="stylesheet" href="style.css">
-	</head>
+	</head>	
 	<body>
-		<h1>Welcome to Recycling, probably the most fun experience you'll ever have</h1>
+		<h1>Welcome to Recycling, 
+			<br> probably the most 
+			<br>fun experience 
+			<br>you'll ever have
+		</h1>
 		
+		<h2 class= "general idea"> What is waste?
+		</h2>
+		<p> Waste is a subtance that is discarded after its first use. The waste that we mostly produce in NYC is known as Municipal Solid Waste which mainly consits of household trash. </p>
+		
+		<h2 class= "general idea"> Basics on Recycling </h2>
+
+		
+		<h2 class= "general idea">
+			Why should you recycle? </h2
+			<p> Recycling has many benefits to both the economy and the environment. </h2>
+
+		
+		<h2 class="general idea">
+			Consequences of not recycling
+		</h2>
+
+		<h2 class= "general idea">
+			Journey of our Recycables
+		</h2>
 
 
 
