added an image and changed font size and family

--- a/index.html
+++ b/index.html
@@ -5,25 +5,10 @@
 		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
-		<h1>Welcome to Recycling, probably the most fun experience you'll ever have</h1>
-		
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-		<script src="script.js">
-		</script>
+		<h1>Waste Management</h1>
+		<script src="script.js"> </script>
+		<div class="wasteImage" id="wasteImage">
+     		<img src="waste.jpg">
+     	</div>
 	</body>
 </html>
