more txt in html

--- a/index.html
+++ b/index.html
@@ -5,38 +5,38 @@
 		<link rel="stylesheet" href="style.css">
 	</head>	
 	<body>
-<<<<<<< HEAD
+
 		<h1>Waste Management</h1>
 		<script src="script.js"> </script>
 		<div class="wasteImage" id="wasteImage">
      		<img src="waste.jpg">
      	</div>
 =======
-		<h1>Welcome to Recycling, 
-			<br> probably the most 
-			<br>fun experience 
-			<br>you'll ever have
-		</h1>
-		
-		<h2 class= "general idea"> What is waste?
+		<div class="wrapper">
+		<h2> What is waste?
 		</h2>
 		<p> Waste is a subtance that is discarded after its first use. The waste that we mostly produce in NYC is known as Municipal Solid Waste which mainly consits of household trash. </p>
 		
-		<h2 class= "general idea"> Basics on Recycling </h2>
-
-		
-		<h2 class= "general idea">
-			Why should you recycle? </h2
-			<p> Recycling has many benefits to both the economy and the environment. </h2>
-
-		
-		<h2 class="general idea">
-			Consequences of not recycling
+		<h2> Basics on Recycling 
 		</h2>
+			<p>Common items that you can recycle in everyday life are soda cans, newspapers, water bottles and more.
+				<br>You can drop off recycables at a collection center near you or wait for curbside collection in your community.
+				<br>It doesn't count as recycling if you just mix up all regular trash with things that are made of plastic, metal, or paper. </p>
 
-		<h2 class= "general idea">
+		
+		<h2>
+			Why should you recycle? </h2>
+			<p> Recycling has many benefits to both the economy and the environment.</p> </h2>
+
+		
+		<h2>
+			Consequences of not recycling </h2>
+			<p>
+
+		<h2>
 			Journey of our Recycables
 		</h2>
+	</div>
 
 
 
@@ -55,6 +55,6 @@
 
 		<script src="script.js">
 		</script>
->>>>>>> 2082218ca5a25e49da6b8aba7d20e986a8db6676
+
 	</body>
 </html>
