--- a/index.html
+++ b/index.html
@@ -5,56 +5,41 @@
 		<link rel="stylesheet" href="style.css">
 	</head>	
 	<body>
-<<<<<<< HEAD
-		<h1>Waste Management</h1>
+		<h1> Waste Management </h1>
 		<script src="script.js"> </script>
+
 		<div class="wasteImage" id="wasteImage">
      		<img src="waste.jpg">
      	</div>
-=======
-		<h1>Welcome to Recycling, 
-			<br> probably the most 
-			<br>fun experience 
-			<br>you'll ever have
-		</h1>
 		
-		<h2 class= "general idea"> What is waste?
-		</h2>
-		<p> Waste is a subtance that is discarded after its first use. The waste that we mostly produce in NYC is known as Municipal Solid Waste which mainly consits of household trash. </p>
-		
-		<h2 class= "general idea"> Basics on Recycling </h2>
+	<div class="wrapper">
+			<div>
+		<h2> What is waste? </h2>
 
+		<p> Waste is a subtance that is discarded after its first use. As citizens, the waste that we produce the most is known as Municipal Solid Waste (MSW). Municipal Solid Waste consits mainly of household trash. </p>
+			</div>
 		
-		<h2 class= "general idea">
-			Why should you recycle? </h2
-			<p> Recycling has many benefits to both the economy and the environment. </h2>
-
+			<div>
+		<h2> Basics on Recycling </h2>
+			</div>
 		
-		<h2 class="general idea">
+			<div>
+		<h2> Why should you recycle? </h2>
+			<p> Recycling has many benefits to both the economy and the environment. </p>
+			</div>
+		
+			<div>
+		<h2>
 			Consequences of not recycling
 		</h2>
+			</div>
 
-		<h2 class= "general idea">
-			Journey of our Recycables
+			<div>
+		<h2>
+			Journey of our Recycling
 		</h2>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-		<script src="script.js">
-		</script>
->>>>>>> 2082218ca5a25e49da6b8aba7d20e986a8db6676
+		</div>
+	</div>
+ 		<script src="script.js"> </script>
 	</body>
 </html>
