changes to index

--- a/index.html
+++ b/index.html
@@ -15,18 +15,29 @@
 		<div class="wrapper">
 		<h2> What is waste?
 		</h2>
-		<p> Waste is a subtance that is discarded after its first use. The waste that we mostly produce in NYC is known as Municipal Solid Waste which mainly consits of household trash. </p>
+		<p> Waste is a subtance that is discarded after its first use. 
+			<br>The waste that we mostly produce in NYC is known as Municipal Solid Waste which mainly consits of household trash.
+		 </p>
 		
-		<h2> Basics on Recycling 
-		</h2>
+		<h2> Basics on Recycling </h2>
 			<p>Common items that you can recycle in everyday life are soda cans, newspapers, water bottles and more.
-				<br>You can drop off recycables at a collection center near you or wait for curbside collection in your community.
-				<br>It doesn't count as recycling if you just mix up all regular trash with things that are made of plastic, metal, or paper. </p>
+			</p>
+				<ul>
+				
+				<li> Make sure to sort out the plastics, metals, and paper materials that you have finished using. </li>
+
+				<li> If you can, please reuse plastic bags or go for a more environmental approach and buy a tote bag that you can use repeatedly when you go shopping.  </li>
+
+				<li> Look out for newspapers! A newsstand usually accepts papers back after you are finished with them. In addition, if you feel like throwing away a book then one thing you can do is donate it to a library. </li>
+				
+				<li>You can drop off recycables at a collection center near you or wait for curbside collection in your community. </li>
+
+			</ul>
 
 		
-		<h2>
-			Why should you recycle? </h2>
-			<p> Recycling has many benefits to both the economy and the environment.</p> </h2>
+		<h2> Why should you recycle / manage your waste? </h2>
+			<p> Recycling has many benefits to both the economy and the environment. One way that it helps economy for example is that it provides sanitation jobs to those in cities and suburban areas. 
+				<br>As well, when you recycle many products can be made out of the material that you are recycling! </p>
 
 		
 		<h2>
