replaced old code with first draft

--- a/index.html
+++ b/index.html
@@ -3,48 +3,42 @@
 	<head>
 		<title> </title>
 		<link rel="stylesheet" href="style.css">
+		<script src="script.js"> </script>
 	</head>	
 	<body>
-		<h1> Waste Management </h1>
-		<script src="script.js"> </script>
-
-		<div class="wasteImage" id="wasteImage">
-     		<img src="waste.jpg">
+		<div class="homeTreeImage" id="homeTreeImage">
+     		<img src="homeTree.jpg">
      	</div>
-		<div class="street" id="street">
-     		<img src="street.jpg">
+     	<h1> Waste Management </h1>
+     	<div class="learn">
+     		<h2>Learn</h2>
+     	</div>
+     	<div class="act">
+     		<h2>Act</h2>
      	</div>
 
+     	<div class="explainerHeader">
+     		<h3>Improper Waste Management</h3>
+     	</div>
 
-	<div class="wrapper">
-			<div>
-		<h2> What is waste? </h2>
-		<p> Waste is a subtance that is discarded after its first use. As citizens, the waste that we produce the most is known as Municipal Solid Waste (MSW). Municipal Solid Waste consits mainly of household trash. </p>
-			</div>
+     	<div class="explainer">
+     		<p>Improper management of waste is a large problem in our world today.</p>
+     		<p>This stems from our actions as citizens.</p>
+     		<p>Our hope is that this website will inform everyone on their harmful waste habits so that they can change their actions in the future.</p>
+     		<p>Thank you.</p>
+     	</div>
 
-			<div>
-		<h2> Basics on Recycling </h2>
-			<p> Common items that you can recycle in everyday life are soda cans, newspapers, water bottles and more.
-				<br>You can drop off recycables at a collection center near you or wait for curbside collection in your community.
-				<br>It doesn't count as recycling if you just mix up all regular trash with things that are made of plastic, metal, or paper. </p>
-			</div>
-		
-			<div>
-		<h2> Why should you recycle? </h2>
-			<p> Recycling has many benefits to both the economy and the environment.</p> </h2>
-			</div>
-			
-			<div>
-		<h2>
-			Consequences of not recycling </h2>
-			<p></p>
-			</div>
+     	<div class="trashCan" id="trashCan">
+     		<img src="trashcan.png">
+     	</div>
 
-			<div>
-		<h2> Journey of our Recycables </h2>
-			</div>
-	</div>
-	<script src="script.js"></script>
+     	<div class="Q1Header">
+     		<h4> What is waste? </h4>
+     	</div>
+
+     	<div class="Q1">
+     		<p> Waste is a subtance that is discarded after its first use. As citizens, the waste that we produce the most is known as Municipal Solid Waste (MSW). Municipal Solid Waste consits mainly of household trash. </p>
+     	</div>
 
 	</body>
 </html>
