--- a/index.html
+++ b/index.html
@@ -40,5 +40,17 @@
                <p> Waste is a subtance that is discarded after its first use. As citizens, the waste that we produce the most is known as Municipal Solid Waste (MSW). Municipal Solid Waste consits mainly of household trash. </p>
           </div>
 
+          <div class="wasteManagement" id="wasteManagement">
+               <img src="wasteManagement.jpg">
+          </div>
+
+          <div class="Q2Header">
+               <h4> What is waste management? </h4>
+          </div>
+
+          <div class="Q2">
+               <p> Waste management is the classification and seperation of types of Municipal Solid Waste. These include: metals, plastics, papers, food, yard trimmings, wood, rubbers and texitles, and glass. </p>
+          </div>
+
      </body>
 </html>
