added Q3 and image of seperation

--- a/index.html
+++ b/index.html
@@ -52,5 +52,19 @@
                <p> Waste management is the classification and seperation of types of Municipal Solid Waste. These include: metals, plastics, papers, food, yard trimmings, wood, rubbers and texitles, and glass. </p>
           </div>
 
+          <div class="trashSeperation" id="trashSeperation">
+          	<img src="trashSeperation.jpeg">
+          </div>
+
+         <div class="Q3Header">
+               <h4> How is waste managed? </h4>
+          </div>
+
+           <div class='Q3'>
+          	<p> The system of waste management starts at home with one seperating the classes of recycables/waste. 
+          		<br>
+          		After one has completed this task, New York City Department of Sanitation picks up the managed waste and delivers it to a landfill, energy converter or recycable recovery facilities. At the landfill, most waste is compacted which reduces its size and allows for more waste to be stored in the same space. </p>
+          </div>
+
      </body>
 </html>
