edited question 3 and fixed the orientation of images on the page

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                <p> Waste is a subtance that is discarded after its first use. As citizens, the waste that we produce the most is known as Municipal Solid Waste (MSW). Municipal Solid Waste consits mainly of household trash. </p>
           </div>
 
-          <div class="wasteManagement" id="wasteManagement">
-               <img src="wasteManagement.jpg">
+          <div class="trashSeperation" id="trashSeperation">
+               <img src="trashSeperation.jpg">
           </div>
 
           <div class="Q2Header">
@@ -52,8 +52,8 @@
                <p> Waste management is the classification and seperation of types of Municipal Solid Waste. These include: metals, plastics, papers, food, yard trimmings, wood, rubbers and texitles, and glass. </p>
           </div>
 
-          <div class="trashSeperation" id="trashSeperation">
-          	<img src="trashSeperation.jpeg">
+          <div class="wasteManagement" id="wasteManagement">
+          	<img src="wasteManagement.jpg">
           </div>
 
          <div class="Q3Header">
@@ -61,9 +61,8 @@
           </div>
 
            <div class='Q3'>
-          	<p> The system of waste management starts at home with one seperating the classes of recycables/waste. 
-          		<br>
-          		After one has completed this task, New York City Department of Sanitation picks up the managed waste and delivers it to a landfill, energy converter or recycable recovery facilities. At the landfill, most waste is compacted which reduces its size and allows for more waste to be stored in the same space. </p>
+          	<p> The system of waste management starts at home with the individual separating types of waste from each other. Once placed in cans or on the sidewalk, the New York City Department of Sanitation picks up the managed waste and delivers it to a landfill, energy converter or recyclable recovery facilities.
+               </p>
           </div>
 
      </body>
