--- a/index.html
+++ b/index.html
@@ -62,8 +62,23 @@
 
            <div class='Q3'>
           	<p> The system of waste management starts at home with the individual separating types of waste from each other. Once placed in cans or on the sidewalk, the New York City Department of Sanitation picks up the managed waste and delivers it to a landfill, energy converter or recyclable recovery facilities.
-               </p>
+             </p>
+          </div> 
+          <div class="Q4Header" > 
+          	<h4> Why should we manage waste? </h4> 
           </div>
+
+
+         <div class='Q4'> 
+         	<p> Waste management is important to the wellbeing of our society and environment. Improper MSW disposal and management causes all types of pollution: air, soil, and water. In urban areas, MSW clogs drains, creating stagnant water for insect breeding and floods during rainy seasons. Uncontrolled burning of MSW and improper incineration contributes significantly to urban air pollution. The U.S. Public Health Service identified 22 human diseases that are linked to improper MSW management. </p> 
+         </div>
+
+
+
+
+
+
+
 
      </body>
 </html>
