--- a/index.html
+++ b/index.html
@@ -70,14 +70,8 @@
 
 
          <div class='Q4'> 
-         	<p> Waste management is important to the wellbeing of our society and environment. Improper MSW disposal and management causes all types of pollution: air, soil, and water. In urban areas, MSW clogs drains, creating stagnant water for insect breeding and floods during rainy seasons. Uncontrolled burning of MSW and improper incineration contributes significantly to urban air pollution. The U.S. Public Health Service identified 22 human diseases that are linked to improper MSW management. </p> 
+         	<p> Waste management is essential to the wellbeing of our society and environment. Improper Municipal Solid Waste disposal and management causes all types of pollution: air, soil, and water. In urban areas, MSW clogs drains, creating stagnant water for insect breeding and floods during rainy seasons. Uncontrolled burning of MSW and improper incineration contributes significantly to urban air pollution. The U.S. Public Health Service identified 22 human diseases that are linked to improper MSW management. </p> 
          </div>
-
-
-
-
-
-
 
 
      </body>
