added articles option

--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@
      </head>   
      <body>
           <div class="homeTreeImage" id="homeTreeImage">
-               <h1> Waste Management </h1>
-               <div class="learn">
-                    <h2>Learn</h2>
+               <div class="titles" id="titles">
+                    <h1 > Waste Management </h1>
+                    <h5 class="articles"> Articles </h5>
                </div>
-               <div class="act">
-                    <h2>Act</h2>
-               </div>
+                    <div class="learn">
+                         <h2>Learn</h2>
+                    </div>
+                    <div class="act">
+                         <h2>Act</h2>
+                    </div>
           </div>
 
 
@@ -64,6 +67,11 @@
           	<p> The system of waste management starts at home with the individual separating types of waste from each other. Once placed in cans or on the sidewalk, the New York City Department of Sanitation picks up the managed waste and delivers it to a landfill, energy converter or recyclable recovery facilities.
              </p>
           </div> 
+
+          <div class="trashPile" id="trashPile">
+               <img src="trashPile.jpg">
+          </div>
+
           <div class="Q4Header" > 
           	<h4> Why should we manage waste? </h4> 
           </div>
