--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>    
      <head>
-          <title> Why recycle glass? It's crystal clear!x </title>
+          <title> Why recycle glass? It's crystal clear! </title>
           <link rel="stylesheet" href="style.css">
           <script src="script.js"> </script>
      </head>   
