fixed bugs & started on javascript code

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
           <div class="homeTreeImage" id="homeTreeImage">
                <div class="titles" id="titles">
                     <h1 > Waste Management </h1>
-                    <h5 class="articles"> Articles </h5>
+                    <h5> Articles </h5>
                </div>
                     <div class="learn">
                          <h2>Learn</h2>
