turned the logo and the articles text into buttons

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
      <body>
           <div class="homeTreeImage" id="homeTreeImage">
                <div class="titles" id="titles">
-                    <h1 > Waste Management </h1>
-                    <h5> Articles </h5>
+                    <a href="https://carlossj.github.io/wastemanagement/" class="logo"> Waste Management </a>
+                    <a href="https://carlossj.github.io/wastemanagement/articles" class="articles"> Articles </a>
                </div>
                     <div class="learn">
                          <h2>Learn</h2>
