added act page & header for all

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
                <div class="titles" id="titles">
                     <a href="https://carlossj.github.io/wastemanagement/" class="logo"> Waste Management </a>
                     <a href="https://carlossj.github.io/wastemanagement/articles" class="articles"> Articles </a>
+                    <a href="https://carlossj.github.io/wastemanagement/act" class="act"> Act </a>
                </div>
                     <div class="learn">
                          <h2>Learn</h2>
