beginning of act page

--- a/act/index.html
+++ b/act/index.html
@@ -10,6 +10,10 @@
                     <a href="https://carlossj.github.io/wastemanagement/articles" class="articles"> Articles </a>
                     <a href="https://carlossj.github.io/wastemanagement/act" class="act"> Act </a>
                </div>
+               <div class="aboutAct">
+               <h1> Act Page </h1>
+               <p> Acting and responding to issues about waste management is crucial. We, as citizens of New York, must follow certain guidelines to do our best and recycle the most materials that we use. Here we shall present to you the laws that New York City has employed and certain basic recycling techniques that many use. </p>
+
      	
      </body>
 </html>
