worked on the act page

--- a/act/index.html
+++ b/act/index.html
@@ -10,10 +10,8 @@
                     <a href="https://carlossj.github.io/wastemanagement/articles" class="articles"> Articles </a>
                     <a href="https://carlossj.github.io/wastemanagement/act" class="act"> Act </a>
                </div>
-               <div class="aboutAct">
-               <h1> Act Page </h1>
-               <p> Acting and responding to issues about waste management is crucial. We, as citizens of New York, must follow certain guidelines to do our best and recycle the most materials that we use. Here we shall present to you the laws that New York City has employed and certain basic recycling techniques that many use. </p>
-
-     	
+               <img src="handTrash.jpg" class="handTrash" style="width:60%;height:auto;">
+               	<h1 class="ActPageHeader"> Act Page </h1>
+               	<p class="ActPage"> Acting and responding to issues about waste management is crucial. As citizens of New York City, we have to follow certain laws and guidelines enforced to help us manage our waste properly. This act page serves as a database of information containing the waste laws that our city administrates for residents along with a list of miscellaneous items and how to correctly manage them. </p>
      </body>
 </html>
