--- a/act/index.html
+++ b/act/index.html
@@ -5,13 +5,17 @@
           <script src="script.js"> </script>
      </head>   
      <body>
-               <div class="titles" id="titles">
+               	<div class="titles" id="titles">
                     <a href="https://carlossj.github.io/wastemanagement/" class="logo"> Waste Management </a>
                     <a href="https://carlossj.github.io/wastemanagement/articles" class="articles"> Articles </a>
                     <a href="https://carlossj.github.io/wastemanagement/act" class="act"> Act </a>
-               </div>
-               <img src="handTrash.jpg" class="handTrash" style="width:60%;height:auto;">
+               	</div>
+               	<img src="handTrash.jpg" class="handTrash" style="width:60%;height:auto;">
                	<h1 class="ActPageHeader"> Act Page </h1>
                	<p class="ActPage"> Acting and responding to issues about waste management is crucial. As citizens of New York City, we have to follow certain laws and guidelines enforced to help us manage our waste properly. This act page serves as a database of information containing the waste laws that our city administrates for residents along with a list of miscellaneous items and how to correctly manage them. </p>
+
+               	<a href="https://carlossj.github.io/wastemanagement/act/laws" class="laws"> Laws </a>
+               	<a href="https://carlossj.github.io/wastemanagement/act/items" class="items"> Items </a>
+
      </body>
 </html>
