--- a/act/index.html
+++ b/act/index.html
@@ -3,6 +3,7 @@
      <head>
           <link rel="stylesheet" href="style.css">
           <script src="script.js"> </script>
+          <title> Waste Management | Act </title>
      </head>   
      <body>
                	<div class="titles" id="titles">
@@ -12,7 +13,7 @@
                	</div>
                	<img src="handTrash.jpg" class="handTrash" style="width:60%;height:auto;">
                	<h1 class="ActPageHeader"> Act Page </h1>
-               	<p class="ActPage"> Acting and responding to issues about waste management is crucial. As citizens of New York City, we have to follow certain laws and guidelines enforced to help us manage our waste properly. This act page serves as a database of information containing the waste laws that our city administrates for residents along with a list of miscellaneous items and how to correctly manage them. </p>
+               	<p class="ActPage"> Acting and responding to issues about waste management is crucial. As citizens of New York City, we have to follow certain laws and guidelines enforced to help us manage our waste properly. This act page serves as a database of information containing the waste laws that our city administrates for residents along with a list of miscellaneous items and how to correctly manage them. </p>  
 
                	<a href="https://carlossj.github.io/wastemanagement/act/laws" class="laws"> Laws </a>
                	<a href="https://carlossj.github.io/wastemanagement/act/items" class="items"> Items </a>
