--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
      <head>
           <link rel="stylesheet" href="style.css">
           <script src="script.js"> </script>
+          <title> Waste Management | Home </title>
      </head>   
      <body>
           <div class="homeTreeImage" id="homeTreeImage">
