added template for the laws page

--- a/act/items/index.html
+++ b/act/items/index.html
@@ -5,6 +5,11 @@
           <script src="script.js"> </script>
           <title> Waste Management | Items </title>
      </head>   
-    <body>  
+     <body>
+               	<div class="titles" id="titles">
+                    <a href="https://carlossj.github.io/wastemanagement/" class="logo"> Waste Management </a>
+                    <a href="https://carlossj.github.io/wastemanagement/articles" class="articles"> Articles </a>
+                    <a href="https://carlossj.github.io/wastemanagement/act" class="act"> Take Action </a>
+               	</div>
     </body>
 </html>
