fixing stuff and working on the items page

--- a/act/items/index.html
+++ b/act/items/index.html
@@ -11,5 +11,7 @@
                     <a href="https://carlossj.github.io/wastemanagement/articles" class="articles"> Articles </a>
                     <a href="https://carlossj.github.io/wastemanagement/act" class="act"> Take Action </a>
                	</div>
+
+               	<h1> Items </h1>
     </body>
 </html>
