--- a/act/items/index.html
+++ b/act/items/index.html
@@ -13,5 +13,27 @@
                	</div>
 
                	<h1> Items </h1>
+               	<div class="grid-container">
+  					<div class="grid-item1">
+  						<p> 1 </p>
+  					</div>
+  					<div class="grid-item2">
+  					</div>
+  					<div class="grid-item3">
+  					</div>
+  					<div class="grid-item4">
+  					</div>
+  					<div class="grid-item5">
+  					</div>
+  					<div class="grid-item6">
+  					</div>
+  					<div class="grid-item7">
+  					</div>
+  					<div class="grid-item8">
+  					</div>
+  					<div class="grid-item9">
+  					</div>
+  					<div class="grid-item10">
+  					</div>
     </body>
 </html>
