--- a/act/laws/index.html
+++ b/act/laws/index.html
@@ -31,7 +31,7 @@
 			</div>
 			<div class="grid-item">
   				<a href="https://www1.nyc.gov/nyc-resources/service/1293/burning-garbage">
-  					<h5> Complaints </h5>
+  					<h5>Complaints </h5>
   					
   					<h4> Burning Garbage </h4>
   					<p> Burning garbage outdoors is illegal in New York City. Incinerators are also illegal for civilian use (call 911). </p>
@@ -66,5 +66,230 @@
 
 		</div>
 
+              </div>
+			<div class="grid-item">
+  				<a href="https://www1.nyc.gov/nyc-resources/service/1993/loose-trash-complaint
+">
+
+             <h5> Complaints </h5>
+               <h4> Loose Trash Complaint  </h4>
+                <p> You can report loose trash. Light refuse or rubbish that is likely to be blown or scattered must be securely bundled, tied, or packed before being placed for collection.
+ </p>
+                  </a>
+              </div>
+
+
+           <div class="grid-item">
+  				<a href="https://www1.nyc.gov/nyc-resources/service/7044/bulk-item-pick-up-appointment">
+
+             <h5> Information and Assistance
+ </h5>
+               <h4> Bulk Item Disposal  </h4>
+                <p> You should make an appointment to have non-recyclable bulk items larger than 4 feet by 3 feet removed. If the item you are throwing out is 4 feet by 3 feet or smaller, you do not have to schedule an appointment. You can place the item out according to your normal garbage schedule. </p>
+                  </a>
+              </div>
+
+
+
+
+              <div class="grid-item">
+  				<a href="link goes here">
+
+             <h5> type of law </h5>
+               <h4> name of law  </h4>
+                <p> paragraph </p>
+                  </a>
+              </div>
+
+
+
+              <div class="grid-item">
+  				<a href="link goes here">
+
+             <h5> type of law </h5>
+               <h4> name of law  </h4>
+                <p> paragraph </p>
+                  </a>
+              </div>
+
+
+              <div class="grid-item">
+  				<a href="link goes here">
+
+             <h5> type of law </h5>
+               <h4> name of law  </h4>
+                <p> paragraph </p>
+                  </a>
+              </div>
+
+
+
+              <div class="grid-item">
+  				<a href="link goes here">
+
+             <h5> type of law </h5>
+               <h4> name of law  </h4>
+                <p> paragraph </p>
+                  </a>
+              </div>
+
+
+
+
+
+
+
+              <div class="grid-item">
+  				<a href="link goes here">
+
+             <h5> type of law </h5>
+               <h4> name of law  </h4>
+                <p> paragraph </p>
+                  </a>
+              </div>
+
+
+
+
+              <div class="grid-item">
+  				<a href="link goes here">
+
+             <h5> type of law </h5>
+               <h4> name of law  </h4>
+                <p> paragraph </p>
+                  </a>
+              </div>
+
+
+
+
+
+
+              <div class="grid-item">
+  				<a href="link goes here">
+
+             <h5> type of law </h5>
+               <h4> name of law  </h4>
+                <p> paragraph </p>
+                  </a>
+              </div>
+
+
+
+              <div class="grid-item">
+  				<a href="link goes here">
+
+             <h5> type of law </h5>
+               <h4> name of law  </h4>
+                <p> paragraph </p>
+                  </a>
+              </div>
+
+              <div class="grid-item">
+  				<a href="link goes here">
+
+             <h5> type of law </h5>
+               <h4> name of law  </h4>
+                <p> paragraph </p>
+                  </a>
+              </div>
+
+              <div class="grid-item">
+  				<a href="link goes here">
+
+             <h5> type of law </h5>
+               <h4> name of law  </h4>
+                <p> paragraph </p>
+                  </a>
+              </div>
+
+
+
+              <div class="grid-item">
+  				<a href="link goes here">
+
+             <h5> type of law </h5>
+               <h4> name of law  </h4>
+                <p> paragraph </p>
+                  </a>
+              </div>
+
+
+              <div class="grid-item">
+  				<a href="link goes here">
+
+             <h5> type of law </h5>
+               <h4> name of law  </h4>
+                <p> paragraph </p>
+                  </a>
+              </div> 
+
+   
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+   
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     </body>
 </html>
+
