--- a/act/items/index.html
+++ b/act/items/index.html
@@ -13,7 +13,7 @@
                	</div>
 
                	<h1> Items </h1>
-               <div class="items" id="items">
+               <div class="item1" id="item1">
 
            <div class="compostImage">
                <img src="compostImage.jpg">
@@ -21,5 +21,29 @@
 
           <p> Organic material is one of the most ubiquitous materials that everyday individuals see and use. One way to deal with managing this kind of waste is to toss it anywhere where there is soil. This will help decompose the organic matter, although, it may take quite a long time and it will attract insects. 
           <br> Another way to help give this material back to the Earth is to make the organic matter into compost. You can use this compost to make barren soil more fertile. Compost is a great of way accomplishing this. The city of New York also collects this material so it can be made compost there. </p>
+     </div>
+
+     <div class="item2" id="item2">
+          <div class="ElectronicsImage">
+               <img src="Electronics.png"
+          </div>
+
+          <p></p>
+     </div>
+
+          <div class="item3" id="item3">
+
+           <div class="GasCyclinders">
+               <img src="GasCyclinders.png">
+          </div>
+
+          <p></p>
+
+          <div class="item4" id="item4">
+
+           <div class="MedicalWaste">
+               <img src="GasCyclinders.png">
+          </div>
+
     </body>
 </html>
