--- a/act/items/index.html
+++ b/act/items/index.html
@@ -24,7 +24,7 @@
 
      <div class="item2" id="item2">
           <div class="ElectronicsImage">
-               <img src="Electronics.png"
+               <img src="Electronics.png">
           </div>
 
           <p></p>
@@ -37,12 +37,16 @@
           </div>
 
           <p></p>
+     </div>
 
           <div class="item4" id="item4">
 
            <div class="MedicalWaste">
                <img src="GasCyclinders.png">
           </div>
+
+          <p></p>
+     </div>
 
     </body>
 </html>
