couple more img

--- a/act/items/index.html
+++ b/act/items/index.html
@@ -20,13 +20,30 @@
                <img src="GasCylinders.png">
                <p>1</p>
           </div>
+
           <div class="grid-item">
                <img src="Electronics.png">
                <p>2</p>
           </div>
+
           <div class="grid-item">
                <img src="MedicalWaste.png">
                <p>3</p>
+          </div>
+
+          <div class="grid-item">
+               <img src="cleaningProducts.jpg">
+               <p>4</p>
+          </div>
+
+          <div class="grid-item">
+               <img src="MercuryContainingProducts.png">
+               <p>5</p>
+          </div>
+
+          <div class="grid-item">
+               <img src="Batteries.jpg">
+               <p>6</p>
           </div>
      </div>
 
