Ben has to do paragraphs

--- a/act/items/index.html
+++ b/act/items/index.html
@@ -45,6 +45,21 @@
                <img src="Batteries.jpg">
                <p>6</p>
           </div>
+
+          <div class="grid-item">
+               <img src="AutomotiveProducts.jpg">
+               <p>7</p>
+          </div>
+
+          <div class="grid-item">
+               <img src="LawnAndGardenCare Products.png">
+               <p>8</p>
+          </div>
+
+          <div class="grid-item">
+               <img src="AsbestosGraphic.jpg">
+               <p>9</p>
+          </div>
      </div>
 
     </body>
