--- a/act/laws/index.html
+++ b/act/laws/index.html
@@ -79,7 +79,7 @@
   				<a href="https://www1.nyc.gov/nyc-resources/service/1038/bulk-item-disposal">
              		<h5> Collection and Disposal </h5>
            			<h4> Bulk Item Disposal  </h4>
-                	<p> Bulk Items are things that can’t fit into normal garbage bags or bins. Curbside collection collect these items for free. You should schedule an appointment for non-recyclable items larger than 4 feet by 3 feet. Items will be picked up on your appointment day. Put small (4 feet by 3 feet and smaller) non-recyclable items out the night before any garbage collection day. Put recyclable items (metal and rigid plastics) out the night before your recycling day. You must make an appointment for the pickup of any appliance containing CFCs or Freon, such as air conditioners and refrigerators. You cannot bring bulk items to the City's special waste disposal sites. Construction or renovation debris is considered commercial waste, unless you have done the work yourself and did not hire anyone to help. You can place up to six items (bags, bundles) curbside for home repair debris. All other bulk items placed out for collection must not be placed in the street, extend in front of another property, or impede pedestrian traffic. If you have a large amount of items, consider placing them out over several collection days. </p>
+                	<p> Bulk Items are things that can’t fit into normal garbage bags or bins. Curbside collection collect these items for free. You must make an appointment for the pickup of any appliance containing CFCs or Freon, such as air conditioners and refrigerators. You cannot bring bulk items to the City's special waste disposal sites.  </p>
                 </a>
             </div>
             <div class="grid-item">
@@ -149,14 +149,14 @@
   				<a href="https://www1.nyc.gov/nyc-resources/service/1065/leaf-disposal-information">
             		<h5> Collection and Disposal </h5>
                		<h4> Leaf Disposal Information  </h4>
-                	<p> If you do not live in an area that receives organics collections, then you have dispose  your leaves with your garbage. </p>
+                	<p> If you do not live in an area that receives organics collections, then you have dispose your leaves with your garbage. </p>
                 </a>
             </div>
             <div class="grid-item">
   				<a href="https://www1.nyc.gov/nyc-resources/service/2011/mattress-or-box-spring-disposal-information-and-appointment">
              		<h5> Collection and Disposal </h5>
                		<h4> Mattress or Box Spring Disposal Information and Appointment  </h4>
-                	<p> You must seal any mattress or boxspring in a plastic bag before placing it out with regular garbage for bulk collection. This rule will help prevent the spread of bed bugs. If you do not dispose of mattresses or box springs properly, they will not be collected, and you may receive a $100 fine. </p>
+                	<p> You must seal any mattress or boxspring in a plastic bag before placing it out with regular garbage for bulk collection.This rule will help prevent the spread of bed bugs. If you do not dispose of mattresses or box springs properly, they will not be collected, and you may receive a $100 fine. </p>
                 </a>
             </div>
             <div class="grid-item">
