worked on items page

--- a/act/items/index.html
+++ b/act/items/index.html
@@ -18,7 +18,7 @@
      <div class="grid-container">
           <div class="grid-item">
                <img src="GasCylinders.png">
-               <p>1</p>
+               <p> Gas cylinders are pressurized and may explode when compressed in a truck. Be sure to follow the instructions below for each type of gas cylinder. </p>
           </div>
 
           <div class="grid-item">
