all the info in the paragraphs

--- a/act/items/index.html
+++ b/act/items/index.html
@@ -18,49 +18,68 @@
      <div class="grid-container">
           <div class="grid-item">
                <img src="GasCylinders.png">
-               <p> Gas cylinders are pressurized and may explode when compressed in a truck. Be sure to follow the instructions below for each type of gas cylinder. </p>
+               <p>All gas cylinders can be brought to a SAFE Disposal Event.
+                    <br> Dry chemical and carbon dioxide extinguishers can be recycled with bulk metal once they are emptied, the pressure has been relieved, and the head has been removed. Follow the National Fire Protection Association’s PASS technique to ensure that you have appropriately emptied your  re extinguisher. 
+               </p>
           </div>
 
           <div class="grid-item">
                <img src="Electronics.png">
-               <p>2</p>
+               <p>Before disposal, TVs or computer monitors with broken
+glass should be placed in separate sealed bags or boxes.</p>
           </div>
 
           <div class="grid-item">
                <img src="MedicalWaste.png">
-               <p>3</p>
+               <p>
+Garbage. Mix unwanted medications with an undesirable substance (such as used coffee grounds or kitty litter), put in leak-proof, nondescript containers (such as empty cans or sealable bags) marked “NOT FOR RECYCLING,” and place in the garbage.</p>
           </div>
 
           <div class="grid-item">
                <img src="cleaningProducts.jpg">
-               <p>4</p>
+               <p>Never dispose of highly corrosive liquids (such as hydro uoric, sulfuric, or
+muriatic acids) at the curb or down the drain.
+<br> Pick-Up. Contact an appropriate private hazardous/chemical waste company.
+Fees may apply.
+<br> DSNY Drop-Off. Bring harmful cleaning products to a SAFE Disposal Event. See page 19 for details.
+<br> Garbage. If the product is labeled “DANGER — CORROSIVE,” do not pour down the drain. Dry out using newspaper, kitty litter, or other absorbent material prior to discarding. Double bag the empty container and mark it, “DANGER — NOT FOR RECYCLING,” then place it in the garbage.
+<br> Recycle. If the product is not labeled “DANGER — CORROSIVE,” use up the product and dry out any remaining liquid with newspaper, kitty litter, or other absorbent material. Then recycle the empty container with other rigid plastics, metal, glass, and cartons.</p>
           </div>
 
           <div class="grid-item">
                <img src="MercuryContainingProducts.png">
-               <p>5</p>
+               <p>5Bring  uorescent tubes and CFLs to a SAFE Disposal Event or to any DSNY Household Special Waste Drop-Off Site. 
+            <br> Double bag if discarding in the garbage to prevent injury to Sanitation workers.   
+       </p>
           </div>
 
           <div class="grid-item">
                <img src="Batteries.jpg">
-               <p>6</p>
+               <p> Alkaline batteries are no longer classi ed as hazardous in
+New York State and may be discarded in the regular garbage with no special handling. However, it is more environmentally friendly to recycle by bringing to a SAFE Disposal Event or to any DSNY Household Special Waste Drop-Off Site.</p>
           </div>
 
           <div class="grid-item">
                <img src="AutomotiveProducts.jpg">
-               <p>7</p>
+               <p>Do not place antifreeze directly in your garbage; it can explode in Sanitation compactor trucks and cause serious injury to Sanitation workers and pedestrians. Dry out using newspaper, kitty litter, or other absorbent material prior to discarding.
+               <br> Empty antifreeze containers can be recycled with other rigid plastics, metal, glass, and cartons.
+               </p>
           </div>
 
           <div class="grid-item">
                <img src="LawnAndGardenCare Products.png">
-               <p>8</p>
+               <p>If the product is labeled “DANGER — CORROSIVE,” do not pour down the drain. Dry out using newspaper, kitty litter, or other absorbent material prior to discarding. Double bag the empty container and mark it, “DANGER — NOT FOR RECYCLING,” then place it in the garbage.
+               <br> If the product is not labeled “DANGER — CORROSIVE,” use up the product and dry out any remaining liquid with newspaper, kitty litter, or other absorbent material. Then recycle the empty container with other rigid plastics, metal, glass, and cartons.
+               </p>
           </div>
 
           <div class="grid-item">
                <img src="AsbestosGraphic.jpg">
-               <p>9</p>
+               <p>If you are renovating or demolishing a building, you must conform to asbestos abatement regulations to avoid release of asbestos  bers into the air. NYC’s Asbestos Control Program provides guidance on and requirements for the proper handling, storing, and disposal of asbestos-containing materials.</p>
           </div>
      </div>
+
+     http://materials.bwprronline.org/system/tdf/harmful-products-brochure-06310-f.pdf
 
     </body>
 </html>
